tests/cases/typecheck/lits/very_out_of_range.hash
// run=fail, stage=typecheck

main := () => {
    l := 92312981239128391283;
}
